# Faceting

./: BasicShapes.cpp  BasicShapes.h  CMakeLists.txt  Gemstone.cpp  Gemstone.h  LoadMeshFromFile.cpp  LoadMeshFromFile.h  LoadShaders.cpp  LoadShaders.h  Mesh.h  PlotVertices.cpp  PlotVertices.h  main.cpp
shaders/: fragment.glsl  vertex.glsl
